--- a/docker_compose/nodejs/Dockerfile
+++ b/docker_compose/nodejs/Dockerfile
@@ -5,3 +5,7 @@ RUN sed -i 's/\r//' start.sh
 RUN chmod +x start.sh
 ADD . /app
 WORKDIR /app
+# Installing the pre-required packages and libraries for electron & Nightmare
+RUN apt-get update &&\
+    apt-get install -y libgtk2.0-0 libgconf-2-4 \
+    libnotify4 libasound2 libxtst6 libxss1 libnss3 xvfb
